# zaprett-app

./: .gitmodules  README.md  build.gradle.kts  changelog.md  settings.gradle.kts  update.json
.github/workflows/: workflow.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/cherret/zaprett/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.h  native-lib.c  utils.c
app/src/main/java/com/cherret/zaprett/: ByeDpiVpnService.kt  MainActivity.kt  Module.kt  NativeBridge.kt  QSTileService.kt  RepositoryDownloader.kt  ServiceStatus.kt  TProxyService.kt  Updater.kt
app/src/main/java/com/cherret/zaprett/byedpi/: ByeDpiVpnService.kt  NativeBridge.kt  ServiceStatus.kt  TProxyService.kt
app/src/main/java/com/cherret/zaprett/component/: ListItems.kt  SettingsComponents.kt
app/src/main/java/com/cherret/zaprett/data/: AppListType.kt  ItemType.kt  ListType.kt  ListUiState.kt  RepoData.kt  RepoTab.kt  ServiceStatus.kt  ServiceStatusUI.kt  ServiceType.kt  Setting.kt  StorageData.kt  StrategyCheckResult.kt  StrategyTestingStatus.kt  UpdateInfo.kt  ZaprettConfig.kt
app/src/main/jni/: Application.mk
app/src/main/res/drawable/: matrix.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/cherret/zaprett/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: CMakeLists.txt  Cargo.toml  build.rs
rust/src/: lib.rs
(+41 files in other folders)
