[package]
name = "byedpi"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
android_logger = "0.15.1"
log = "0.4"
nix = { version = "0.30.1", features = ["socket"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1.49"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
